--- a/appendix-A/01_main-chapter-code/code-part1.ipynb
+++ b/appendix-A/01_main-chapter-code/code-part1.ipynb
@@ -47,12 +47,12 @@
       "execution_count": 1,
       "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
       "metadata": {
-        "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
-        "outputId": "3ce508c1-5172-43de-8806-8e34bd44675e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
+        "outputId": "3ce508c1-5172-43de-8806-8e34bd44675e"
       },
       "outputs": [
         {
@@ -74,12 +74,12 @@
       "execution_count": 2,
       "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
       "metadata": {
-        "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
-        "outputId": "c7e0fd69-b931-40a2-92ef-62800f29b6fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
+        "outputId": "c7e0fd69-b931-40a2-92ef-62800f29b6fb"
       },
       "outputs": [
         {
@@ -188,12 +188,12 @@
       "execution_count": 4,
       "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
       "metadata": {
-        "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
-        "outputId": "e63d7d71-3957-4319-f80d-9c5a6962254e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
+        "outputId": "e63d7d71-3957-4319-f80d-9c5a6962254e"
       },
       "outputs": [
         {
@@ -218,12 +218,12 @@
       "execution_count": 5,
       "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
       "metadata": {
-        "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
-        "outputId": "3d7ee142-d3a6-47e0-e5d9-4ad32a0219e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
+        "outputId": "3d7ee142-d3a6-47e0-e5d9-4ad32a0219e8"
       },
       "outputs": [
         {
@@ -303,12 +303,12 @@
       "execution_count": 6,
       "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
       "metadata": {
-        "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
-        "outputId": "3ada3953-7d72-4898-fe52-8f31390514c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
-        }
+        },
+        "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
+        "outputId": "3ada3953-7d72-4898-fe52-8f31390514c0"
       },
       "outputs": [
         {
@@ -590,11 +590,11 @@
       "execution_count": 19,
       "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
       "metadata": {
-        "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
-        "outputId": "3aad4692-a486-4c58-e371-7141a39b7dbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
+        "outputId": "3aad4692-a486-4c58-e371-7141a39b7dbd"
       },
       "outputs": [
         {
@@ -641,11 +641,11 @@
       "execution_count": 20,
       "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
       "metadata": {
-        "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
-        "outputId": "728e3c3c-bde1-48b1-d2cc-36fd428b06a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
+        "outputId": "728e3c3c-bde1-48b1-d2cc-36fd428b06a6"
       },
       "outputs": [
         {
@@ -688,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 24,
       "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1",
       "metadata": {
         "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1"
@@ -696,19 +696,22 @@
       "outputs": [],
       "source": [
         "# for implementing a nn we subclass torch.nn.Module class\n",
+        "# Coding the number of inputs and outputs as variables allows us to reuse\n",
+        "# the same code for datasets with different numbers of features and classes\n",
         "class NeuralNetwork(torch.nn.Module):\n",
         "    def __init__(self, num_inputs, num_outputs):\n",
         "        super().__init__()\n",
         "\n",
         "        self.layers = torch.nn.Sequential(  # we can add our layers inside torch.nn.Sequential()\n",
-        "\n",
+        "            # we don't need to define an input layer\n",
         "            # 1st hidden layer\n",
-        "            torch.nn.Linear(num_inputs, 30),\n",
+        "            torch.nn.Linear(num_inputs, 30),  # The Linear layer takes the number of input and output nodes as arguments.\n",
+        "            # Nonlinear activation functions are placed between the hidden layers\n",
         "            torch.nn.ReLU(),  # activation function is seen here as a layer\n",
         "\n",
         "            # 2nd hidden layer\n",
         "            # the number of inputs of a hidden layer (here 30) must be equal to the number of outputs of the previous hidden layer\n",
-        "            torch.nn.Linear(30, 20),\n",
+        "            torch.nn.Linear(30, 20),  # Linear in PyTorch is fully connected layer\n",
         "            torch.nn.ReLU(),  # activation function is seen here as a layer\n",
         "\n",
         "            # output layer\n",
@@ -716,34 +719,38 @@
         "        )\n",
         "\n",
         "    def forward(self, x):  # x is the input of our model\n",
-        "        logits = self.layers(x)\n",
+        "        logits = self.layers(x)  # The outputs of the last layer are called logits.\n",
         "        return logits"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe",
       "metadata": {
         "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe"
       },
       "outputs": [],
       "source": [
+        "# instanciate an object of our NeuralNet\n",
         "model = NeuralNetwork(50, 3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "39d02a21-33e7-4879-8fd2-d6309faf2f8d",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "39d02a21-33e7-4879-8fd2-d6309faf2f8d",
-        "outputId": "0c626822-ba90-4c7b-fa99-355c40b2f9b0"
+        "outputId": "bd97c78d-156e-47d2-e72d-01ab7e3612d3"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "NeuralNetwork(\n",
             "  (layers): Sequential(\n",
@@ -763,67 +770,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "94535738-de02-4c2a-9b44-1cd186fa990a",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "94535738-de02-4c2a-9b44-1cd186fa990a",
-        "outputId": "327445f6-6dfa-478d-db17-18c5d2306b5f"
+        "outputId": "7cb49911-c359-4436-e6fb-6b3f9972640d"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Total number of trainable model parameters: 2213\n"
           ]
         }
       ],
       "source": [
-        "num_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+        "# a model's parameters are the learnable weights and biases of its layers.\n",
+        "# p.numel(): For each parameter p that requires gradient, this function returns the total number of elements in the parameter tensor.\n",
+        "# For example, a weight matrix of size (10, 20) would have 200 elements.\n",
+        "num_params = sum(p.numel() for p in model.parameters() if p.requires_grad)  # each p is a tensor\n",
         "print(\"Total number of trainable model parameters:\", num_params)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "2c394106-ad71-4ccb-a3c9-9b60af3fa748",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "2c394106-ad71-4ccb-a3c9-9b60af3fa748",
-        "outputId": "03fb63a9-b695-499e-d504-a30c77828c5a"
+        "outputId": "aeb55838-dd81-43fc-9949-84061a4cff7a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Parameter containing:\n",
-            "tensor([[ 0.1182,  0.0606, -0.1292,  ..., -0.1126,  0.0735, -0.0597],\n",
-            "        [-0.0249,  0.0154, -0.0476,  ..., -0.1001, -0.1288,  0.1295],\n",
-            "        [ 0.0641,  0.0018, -0.0367,  ..., -0.0990, -0.0424, -0.0043],\n",
+            "tensor([[-0.0577,  0.0047, -0.0702,  ...,  0.0222,  0.1260,  0.0865],\n",
+            "        [ 0.0502,  0.0307,  0.0333,  ...,  0.0951,  0.1134, -0.0297],\n",
+            "        [ 0.1077, -0.1108,  0.0122,  ...,  0.0108, -0.1049, -0.1063],\n",
             "        ...,\n",
-            "        [ 0.0618,  0.0867,  0.1361,  ..., -0.0254,  0.0399,  0.1006],\n",
-            "        [ 0.0842, -0.0512, -0.0960,  ..., -0.1091,  0.1242, -0.0428],\n",
-            "        [ 0.0518, -0.1390, -0.0923,  ..., -0.0954, -0.0668, -0.0037]],\n",
+            "        [-0.0787,  0.1259,  0.0803,  ...,  0.1218,  0.1303, -0.1351],\n",
+            "        [ 0.1359,  0.0175, -0.0673,  ...,  0.0674,  0.0676,  0.1058],\n",
+            "        [ 0.0790,  0.1343, -0.0293,  ...,  0.0344, -0.0971, -0.0509]],\n",
             "       requires_grad=True)\n"
           ]
         }
       ],
       "source": [
-        "print(model.layers[0].weight)"
+        "# for each Linear layer we can access to weight and bias parameters of that layer\n",
+        "print(model.layers[0].weight)\n",
+        "# print(model.layers[1].weight) creates and error\n",
+        "# 'ReLU' object has no attribute 'weight'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "b201882b-9285-4db9-bb63-43afe6a2ff9e",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "b201882b-9285-4db9-bb63-43afe6a2ff9e",
-        "outputId": "1bff7e88-cd47-472e-8add-191d4f635614"
+        "outputId": "eee2cdb6-34bd-432c-fc90-42871f2d34d8"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Parameter containing:\n",
             "tensor([[-0.0577,  0.0047, -0.0702,  ...,  0.0222,  0.1260,  0.0865],\n",
@@ -841,21 +863,25 @@
         "torch.manual_seed(123)\n",
         "\n",
         "model = NeuralNetwork(50, 3)\n",
-        "print(model.layers[0].weight)"
+        "print(model.layers[0].weight)\n",
+        "# by default all the elements of the weight matrix is trainable in torch"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "1da9a35e-44f3-460c-90fe-304519736fd6",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "1da9a35e-44f3-460c-90fe-304519736fd6",
-        "outputId": "bbba4c17-2e2d-407d-9942-634268334ea1"
+        "outputId": "5d1aa2a1-4372-455e-ae7d-ea4713b78b55"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "torch.Size([30, 50])\n"
           ]
@@ -867,16 +893,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "print(model.layers[0].bias)"
+      ],
+      "metadata": {
+        "id": "3qIMC8thTtFD",
+        "outputId": "1639bcf3-edba-44b4-e110-f39a63e2b8ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "3qIMC8thTtFD",
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Parameter containing:\n",
+            "tensor([-0.1250,  0.0513,  0.0366,  0.0075,  0.0509,  0.0545, -0.0393,  0.0924,\n",
+            "        -0.1412, -0.1232, -0.1063,  0.0081, -0.1249,  0.0101, -0.0019, -0.1298,\n",
+            "         0.1388, -0.0330,  0.1017,  0.1247, -0.0554, -0.0417,  0.1388,  0.0159,\n",
+            "         0.1215,  0.0385,  0.0769, -0.1224, -0.0279,  0.0991],\n",
+            "       requires_grad=True)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.layers[0].bias.shape)"
+      ],
+      "metadata": {
+        "id": "-ZeprqkQT7J9",
+        "outputId": "2d546016-7d03-4285-bda0-ba33df14bb39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "-ZeprqkQT7J9",
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([30])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
       "id": "57eadbae-90fe-43a3-a33f-c23a095ba42a",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "57eadbae-90fe-43a3-a33f-c23a095ba42a",
-        "outputId": "4ebd8422-9e9c-446e-c16b-d8c2d29c0301"
+        "outputId": "91c3cb3f-2073-4c6b-a9ec-c3116b93672b"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "tensor([[-0.1262,  0.1080, -0.1792]], grad_fn=<AddmmBackward0>)\n"
           ]
@@ -886,7 +968,7 @@
         "torch.manual_seed(123)\n",
         "\n",
         "X = torch.rand((1, 50))\n",
-        "out = model(X)\n",
+        "out = model(X)  # model(X) automatically executes forward method\n",
         "print(out)"
       ]
     },
@@ -908,6 +990,8 @@
         }
       ],
       "source": [
+        "# when we use a model for inference (for instance, making predictions)\n",
+        "# rather than training, the best practice is to use the torch.no_grad()\n",
         "with torch.no_grad():\n",
         "    out = model(X)\n",
         "print(out)"
