add a few lines of code

--- a/appendix-A/01_main-chapter-code/code-part1.ipynb
+++ b/appendix-A/01_main-chapter-code/code-part1.ipynb
@@ -44,14 +44,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
-        "outputId": "53a1035f-5901-4e90-deb8-fae097be9bfe"
+        "outputId": "1f7cb87a-b8b7-4342-b6bf-116fdbe55bd8"
       },
       "outputs": [
         {
@@ -70,14 +70,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
-        "outputId": "cb46a528-76a4-479d-c7fd-93493eeface5"
+        "outputId": "0c9924de-b688-4df4-a0eb-c9ec02dfeb87"
       },
       "outputs": [
         {
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "id": "a3a464d6-cec8-4363-87bd-ea4f900baced",
       "metadata": {
         "id": "a3a464d6-cec8-4363-87bd-ea4f900baced"
@@ -183,14 +183,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
-        "outputId": "fb21bf86-879e-4b88-94f9-3338ba1cc848"
+        "outputId": "0e957024-c821-4b9f-a900-82861280ad00"
       },
       "outputs": [
         {
@@ -212,14 +212,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
-        "outputId": "e9fcd5af-f90e-404d-b0dc-6bfc862a6d65"
+        "outputId": "021f40d5-73ed-407b-9711-526beaeb4aab"
       },
       "outputs": [
         {
@@ -245,13 +245,13 @@
       ],
       "metadata": {
         "id": "Mo4tRYSBSjdz",
-        "outputId": "c5933131-97ca-4704-8603-ab23809e9be2",
+        "outputId": "702570ee-3717-43f1-b123-25c85ae9c889",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Mo4tRYSBSjdz",
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,7 +261,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 8
         }
       ]
     },
@@ -277,11 +277,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
       "metadata": {
         "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
-        "outputId": "86a9991f-54ec-4a81-ba46-0c7dd65edb27",
+        "outputId": "22c2e558-87bd-4950-ea0f-ff10b0aaf8e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -302,11 +302,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
       "metadata": {
         "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
-        "outputId": "2d319915-b738-4a38-acde-099084a2c10e",
+        "outputId": "7f7d4587-f255-429d-c7d2-b81fabc6add0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -329,14 +329,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
-        "outputId": "00728246-6ce1-4e17-c1d3-cb65e75f3134"
+        "outputId": "44c61ebb-c5e0-452a-9c32-cc66424b8965"
       },
       "outputs": [
         {
@@ -364,11 +364,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
       "metadata": {
         "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
-        "outputId": "07a833e2-7509-4e59-cc34-ea91f597c8c4",
+        "outputId": "10bb3344-03ff-48f7-b55a-3712062e946c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -383,7 +383,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 12
         }
       ],
       "source": [
@@ -394,11 +394,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
       "metadata": {
         "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
-        "outputId": "1d4c8804-318b-41c1-f53e-99e382d2deeb",
+        "outputId": "5b9cc141-af0d-4e5c-af00-dce1c7414ad1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -412,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 13
         }
       ],
       "source": [
@@ -421,69 +421,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
       "metadata": {
         "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
-        "outputId": "1b3fe7f9-b2f8-4eec-cc88-c5be1906e132",
+        "outputId": "e6c41cf2-eafc-4c0a-cab2-a2c2831aead4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[1, 2],\n",
-              "        [3, 4],\n",
-              "        [5, 6]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 45
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[9999,    2,    3],\n",
+            "        [   4,    5,    6]])\n"
+          ]
         }
       ],
       "source": [
-        "tensor2d.reshape(3, 2)"
+        "a = tensor2d.reshape(3, 2)  # create a view and not a new tensor\n",
+        "a[0, 0] = 9999\n",
+        "print(tensor2d)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
       "metadata": {
         "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
-        "outputId": "34724f88-e60c-4707-af26-09a25268e576",
+        "outputId": "9b769131-ed42-4290-fa0e-072804967e12",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[1, 2],\n",
-              "        [3, 4],\n",
-              "        [5, 6]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 46
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[100,   2,   3],\n",
+            "        [  4,   5,   6]])\n"
+          ]
         }
       ],
       "source": [
-        "tensor2d.view(3, 2)  # similar to reshape but reshape is stronger"
+        "# \"view\" create a view and not a new tensor\n",
+        "a = tensor2d.view(3, 2)  # similar to reshape but reshape is stronger\n",
+        "a[0, 0] = 100\n",
+        "print(tensor2d)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
       "metadata": {
         "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
-        "outputId": "5b2432a6-9017-47d8-e950-f422efa8d5da",
+        "outputId": "470da803-b8d3-43ee-a1bc-bcee3d6e2427",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -493,26 +490,26 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[1, 4],\n",
-              "        [2, 5],\n",
-              "        [3, 6]])"
+              "tensor([[100,   4],\n",
+              "        [  2,   5],\n",
+              "        [  3,   6]])"
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 20
         }
       ],
       "source": [
-        "tensor2d.T  # transpose"
+        "tensor2d.T  # transpose (view)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
       "metadata": {
         "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
-        "outputId": "c0f17e8d-f9bf-4d0c-aaf3-022bac4ff541",
+        "outputId": "e39e4da3-0212-4d87-9597-578790947486",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -522,12 +519,12 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[14, 32],\n",
-              "        [32, 77]])"
+              "tensor([[10013,   428],\n",
+              "        [  428,    77]])"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 21
         }
       ],
       "source": [
