a few lines of codes

--- a/appendix-A/01_main-chapter-code/code-part1.ipynb
+++ b/appendix-A/01_main-chapter-code/code-part1.ipynb
@@ -44,14 +44,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
-        "outputId": "1f7cb87a-b8b7-4342-b6bf-116fdbe55bd8"
+        "outputId": "3509e0d7-f91e-42b3-a9cb-c51168df148b"
       },
       "outputs": [
         {
@@ -70,14 +70,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
-        "outputId": "0c9924de-b688-4df4-a0eb-c9ec02dfeb87"
+        "outputId": "20c788c2-28ad-41a4-916f-ae6e82bc1c9d"
       },
       "outputs": [
         {
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "a3a464d6-cec8-4363-87bd-ea4f900baced",
       "metadata": {
         "id": "a3a464d6-cec8-4363-87bd-ea4f900baced"
@@ -183,14 +183,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
-        "outputId": "0e957024-c821-4b9f-a900-82861280ad00"
+        "outputId": "bd93508b-2be9-455b-9341-8870d5423fef"
       },
       "outputs": [
         {
@@ -212,14 +212,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
-        "outputId": "021f40d5-73ed-407b-9711-526beaeb4aab"
+        "outputId": "f75ca87b-3080-47c5-c1ee-b509c210325b"
       },
       "outputs": [
         {
@@ -245,13 +245,13 @@
       ],
       "metadata": {
         "id": "Mo4tRYSBSjdz",
-        "outputId": "702570ee-3717-43f1-b123-25c85ae9c889",
+        "outputId": "6a07966e-8ffb-4f2e-8c69-5b268ad34ac1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Mo4tRYSBSjdz",
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -261,7 +261,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -277,11 +277,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
       "metadata": {
         "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
-        "outputId": "22c2e558-87bd-4950-ea0f-ff10b0aaf8e6",
+        "outputId": "e82858af-c96c-4734-8842-171855c92984",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -302,11 +302,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
       "metadata": {
         "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
-        "outputId": "7f7d4587-f255-429d-c7d2-b81fabc6add0",
+        "outputId": "e1e9f0b7-45a9-430d-e9e3-affd4bddf432",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -329,14 +329,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
-        "outputId": "44c61ebb-c5e0-452a-9c32-cc66424b8965"
+        "outputId": "5d81362f-36a7-4c40-e980-cde3fe2d9b2d"
       },
       "outputs": [
         {
@@ -364,11 +364,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
       "metadata": {
         "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
-        "outputId": "10bb3344-03ff-48f7-b55a-3712062e946c",
+        "outputId": "14035b9c-4ca7-49c3-8a2f-a69964b24319",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -383,7 +383,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ],
       "source": [
@@ -394,11 +394,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
       "metadata": {
         "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
-        "outputId": "5b9cc141-af0d-4e5c-af00-dce1c7414ad1",
+        "outputId": "0765727f-89ef-48d8-a950-aeec667a951c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -412,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ],
       "source": [
@@ -421,11 +421,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
       "metadata": {
         "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
-        "outputId": "e6c41cf2-eafc-4c0a-cab2-a2c2831aead4",
+        "outputId": "1fbf5f60-3475-4ed7-a279-471cd15c79ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -448,11 +448,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 13,
       "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
       "metadata": {
         "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
-        "outputId": "9b769131-ed42-4290-fa0e-072804967e12",
+        "outputId": "41428083-d1d8-4eb6-e10c-8a50d5f525c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -476,11 +476,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
       "metadata": {
         "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
-        "outputId": "470da803-b8d3-43ee-a1bc-bcee3d6e2427",
+        "outputId": "cb8162dd-c2d5-438d-c1cc-5cbea74dfdca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -496,7 +496,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 14
         }
       ],
       "source": [
@@ -505,11 +505,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 15,
       "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
       "metadata": {
         "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
-        "outputId": "e39e4da3-0212-4d87-9597-578790947486",
+        "outputId": "81b27c5a-0c99-4616-f4bc-2538c0ddb070",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -524,7 +524,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 15
         }
       ],
       "source": [
@@ -533,11 +533,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "e7c950bc-d640-4203-b210-3ac8932fe4d4",
       "metadata": {
         "id": "e7c950bc-d640-4203-b210-3ac8932fe4d4",
-        "outputId": "d2e8e4d1-6220-43a9-93ee-413bf3e06aab",
+        "outputId": "87985e41-f3b9-465e-9967-6afa942c4eb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -547,12 +547,12 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[14, 32],\n",
-              "        [32, 77]])"
+              "tensor([[10013,   428],\n",
+              "        [  428,    77]])"
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 16
         }
       ],
       "source": [
@@ -581,11 +581,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "22af61e9-0443-4705-94d7-24c21add09c7",
       "metadata": {
         "id": "22af61e9-0443-4705-94d7-24c21add09c7",
-        "outputId": "0788e998-7690-4c91-b52a-49629dca11b3",
+        "outputId": "c723e8e3-1292-4a15-8949-c6a30f200aeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -636,14 +636,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
-        "outputId": "f43bce9e-434c-4070-97f2-6a0117a8c276"
+        "outputId": "10b26e14-2288-4c33-b881-97b1c15b5ab8"
       },
       "outputs": [
         {
@@ -687,14 +687,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
-        "outputId": "13c1117b-77f9-477b-e595-353aee8c5906"
+        "outputId": "2793bcc2-cea9-4885-853e-a9801bc1a424"
       },
       "outputs": [
         {
@@ -737,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1",
       "metadata": {
         "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1"
@@ -774,7 +774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe",
       "metadata": {
         "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe"
@@ -787,14 +787,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "39d02a21-33e7-4879-8fd2-d6309faf2f8d",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "39d02a21-33e7-4879-8fd2-d6309faf2f8d",
-        "outputId": "d82bc831-b372-487c-c209-0629bba8f001"
+        "outputId": "fb1b7dfb-917e-49da-d3e0-67a219fd09ec"
       },
       "outputs": [
         {
@@ -826,19 +826,19 @@
       ],
       "metadata": {
         "id": "W8Z3u1zynNDU",
-        "outputId": "57da7a63-33fb-4638-986b-dc9e0ba8a68a",
+        "outputId": "f0417109-b198-4f99-b1c8-ba524830a264",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "W8Z3u1zynNDU",
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<generator object Module.parameters at 0x7f44ec0cc120>\n",
+            "<generator object Module.parameters at 0x7d768dbe30d0>\n",
             "torch.Size([30, 50])\n",
             "torch.Size([30])\n",
             "torch.Size([20, 30])\n",
@@ -851,14 +851,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "94535738-de02-4c2a-9b44-1cd186fa990a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "94535738-de02-4c2a-9b44-1cd186fa990a",
-        "outputId": "b58babf1-6350-4992-d8c9-a85ebb7f6e06"
+        "outputId": "f02f7659-08c3-42b9-98cf-0379180bcd18"
       },
       "outputs": [
         {
@@ -879,14 +879,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "2c394106-ad71-4ccb-a3c9-9b60af3fa748",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2c394106-ad71-4ccb-a3c9-9b60af3fa748",
-        "outputId": "e8bf7be2-5c7b-4f34-d6ef-b988d359809e"
+        "outputId": "6b051541-b925-4ad4-d4b8-59776f49ebec"
       },
       "outputs": [
         {
@@ -894,13 +894,13 @@
           "name": "stdout",
           "text": [
             "Parameter containing:\n",
-            "tensor([[ 0.0839,  0.0683,  0.1073,  ...,  0.0328, -0.0777,  0.0544],\n",
-            "        [ 0.1075, -0.0656,  0.1341,  ...,  0.0723,  0.0385,  0.1075],\n",
-            "        [ 0.1377, -0.0111, -0.1020,  ..., -0.0427, -0.0993, -0.0461],\n",
+            "tensor([[ 0.1301,  0.0828,  0.0230,  ...,  0.1197, -0.1271, -0.0588],\n",
+            "        [-0.0640, -0.1266, -0.0704,  ..., -0.0956,  0.0665,  0.1277],\n",
+            "        [-0.0765, -0.0442,  0.1059,  ...,  0.0533, -0.0519, -0.0783],\n",
             "        ...,\n",
-            "        [ 0.1408, -0.0388, -0.0383,  ..., -0.1317, -0.0849, -0.0383],\n",
-            "        [ 0.0301, -0.1401, -0.1378,  ...,  0.0915, -0.0015, -0.0739],\n",
-            "        [ 0.0848,  0.0630, -0.0463,  ...,  0.0994, -0.0665,  0.1316]],\n",
+            "        [-0.0019,  0.0936,  0.1246,  ...,  0.0601,  0.0086, -0.0749],\n",
+            "        [-0.0106, -0.0553,  0.1395,  ..., -0.0649, -0.1358, -0.0057],\n",
+            "        [-0.1119, -0.1065,  0.1237,  ...,  0.1199, -0.1300,  0.0811]],\n",
             "       requires_grad=True)\n"
           ]
         }
@@ -908,20 +908,20 @@
       "source": [
         "# for each Linear layer we can access to weight and bias parameters of that layer\n",
         "print(model.layers[0].weight)\n",
-        "# print(model.layers[1].weight) creates and error\n",
+        "# print(model.layers[1].weight) creates an error\n",
         "# 'ReLU' object has no attribute 'weight'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "b201882b-9285-4db9-bb63-43afe6a2ff9e",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "b201882b-9285-4db9-bb63-43afe6a2ff9e",
-        "outputId": "8c3d3aa7-b504-4553-d2bf-e3c2f69416b1"
+        "outputId": "45748797-1db3-4758-846f-55ca38c4299e"
       },
       "outputs": [
         {
@@ -950,14 +950,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "1da9a35e-44f3-460c-90fe-304519736fd6",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1da9a35e-44f3-460c-90fe-304519736fd6",
-        "outputId": "83bbf628-5c0e-48b5-c1a4-25ea2c691fca"
+        "outputId": "3effa11c-23db-43ef-c20e-f2065855602a"
       },
       "outputs": [
         {
@@ -970,6 +970,44 @@
       ],
       "source": [
         "print(model.layers[0].weight.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# just a simple example of using axis in sum\n",
+        "a2d = np.array([[1,2,3], [4,5,6]])\n",
+        "print(a2d)\n",
+        "a2d.sum(axis=1)"
+      ],
+      "metadata": {
+        "id": "wXA_7GRUHQIq",
+        "outputId": "ba545806-9381-4b51-c28e-b331055df8c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "wXA_7GRUHQIq",
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 6, 15])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
       ]
     },
     {
