--- a/appendix-A/01_main-chapter-code/code-part1.ipynb
+++ b/appendix-A/01_main-chapter-code/code-part1.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "96ee5660-5327-48e2-9104-a882b3b2afa4",
       "metadata": {
         "colab": {
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "f73ad4e4-7ec6-4467-a9e9-0cdf6d195264",
       "metadata": {
         "colab": {
@@ -150,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "a3a464d6-cec8-4363-87bd-ea4f900baced",
       "metadata": {
         "id": "a3a464d6-cec8-4363-87bd-ea4f900baced"
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "dbe14c47-499a-4d48-b354-a0e6fd957872",
       "metadata": {
         "colab": {
@@ -212,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "e3e4c23a-cdba-46f5-a2dc-5fb32bf9117b",
       "metadata": {
         "colab": {
@@ -251,7 +251,7 @@
         }
       },
       "id": "Mo4tRYSBSjdz",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
       "metadata": {
         "id": "3f48c014-e1a2-4a53-b5c5-125812d4034c",
@@ -302,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
       "metadata": {
         "id": "5429a086-9de2-4ac7-9f14-d087a7507394",
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "a9a438d1-49bb-481c-8442-7cc2bb3dd4af",
       "metadata": {
         "colab": {
@@ -364,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
       "metadata": {
         "id": "c02095f2-8a48-4953-b3c9-5313d4362ce7",
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
       "metadata": {
         "id": "f33e1d45-5b2c-4afe-b4b2-66ac4099fd1a",
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
       "metadata": {
         "id": "f3a4129d-f870-4e03-9c32-cd8521cb83fe",
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
       "metadata": {
         "id": "589ac0a7-adc7-41f3-b721-155f580e9369",
@@ -476,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
       "metadata": {
         "id": "344e307f-ba5d-4f9a-a791-2c75a3d1417e",
@@ -505,7 +505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
       "metadata": {
         "id": "19a75030-6a41-4ca8-9aae-c507ae79225c",
@@ -533,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "e7c950bc-d640-4203-b210-3ac8932fe4d4",
       "metadata": {
         "id": "e7c950bc-d640-4203-b210-3ac8932fe4d4",
@@ -581,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "22af61e9-0443-4705-94d7-24c21add09c7",
       "metadata": {
         "id": "22af61e9-0443-4705-94d7-24c21add09c7",
@@ -636,7 +636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "ebf5cef7-48d6-4d2a-8ab0-0fb10bdd7d1a",
       "metadata": {
         "colab": {
@@ -687,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "93c5875d-f6b2-492c-b5ef-7e132f93a4e0",
       "metadata": {
         "colab": {
@@ -737,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1",
       "metadata": {
         "id": "84b749e1-7768-4cfe-94d6-a08c7feff4a1"
@@ -774,7 +774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe",
       "metadata": {
         "id": "c5b59e2e-1930-456d-93b9-f69263e3adbe"
@@ -787,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "39d02a21-33e7-4879-8fd2-d6309faf2f8d",
       "metadata": {
         "colab": {
@@ -832,7 +832,7 @@
         }
       },
       "id": "W8Z3u1zynNDU",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "94535738-de02-4c2a-9b44-1cd186fa990a",
       "metadata": {
         "colab": {
@@ -879,7 +879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "2c394106-ad71-4ccb-a3c9-9b60af3fa748",
       "metadata": {
         "colab": {
@@ -914,7 +914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "b201882b-9285-4db9-bb63-43afe6a2ff9e",
       "metadata": {
         "colab": {
@@ -950,7 +950,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "1da9a35e-44f3-460c-90fe-304519736fd6",
       "metadata": {
         "colab": {
@@ -988,7 +988,7 @@
         }
       },
       "id": "wXA_7GRUHQIq",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1284,9 +1284,9 @@
         "torch.manual_seed(123)\n",
         "\n",
         "train_loader = DataLoader(\n",
-        "    dataset=train_ds,\n",
+        "    dataset=train_ds,  # The ToyDataset instance created earlier serves as input to the data loader\n",
         "    batch_size=2,\n",
-        "    shuffle=True,\n",
+        "    shuffle=True,  # Whether or not to shuffle the data\n",
         "    num_workers=0\n",
         ")"
       ]
@@ -1305,7 +1305,7 @@
         "test_loader = DataLoader(\n",
         "    dataset=test_ds,\n",
         "    batch_size=2,\n",
-        "    shuffle=False,\n",
+        "    shuffle=False,  # It is not necessary to shuffle a test dataset\n",
         "    num_workers=0\n",
         ")"
       ]
@@ -1464,9 +1464,10 @@
         "\n",
         "num_epochs = 3\n",
         "\n",
-        "for epoch in range(num_epochs):\n",
+        "for epoch in range(num_epochs):  # in each loop go through the whole dataset (epoch)\n",
+        "    # This is necessary for components that behave differently during training and inference, such as dropout or batch normalization layers.\n",
+        "    model.train()  # put the model into a training mode\n",
         "\n",
-        "    model.train()\n",
         "    for batch_idx, (features, labels) in enumerate(train_loader):\n",
         "\n",
         "        logits = model(features)\n",
@@ -1536,7 +1537,7 @@
         }
       ],
       "source": [
-        "model.eval()\n",
+        "model.eval()  # put the model into an evaluation mode\n",
         "\n",
         "with torch.no_grad():\n",
         "    outputs = model(X_train)\n",
@@ -1567,11 +1568,11 @@
         }
       ],
       "source": [
-        "torch.set_printoptions(sci_mode=False)\n",
+        "torch.set_printoptions(sci_mode=False)  # to use decimal representation in printing numberss\n",
         "probas = torch.softmax(outputs, dim=1)\n",
         "print(probas)\n",
         "\n",
-        "predictions = torch.argmax(probas, dim=1)\n",
+        "predictions = torch.argmax(probas, dim=1)  # dim=1 -->\n",
         "print(predictions)"
       ]
     },
@@ -1593,7 +1594,7 @@
         }
       ],
       "source": [
-        "predictions = torch.argmax(outputs, dim=1)\n",
+        "predictions = torch.argmax(outputs, dim=1)  # It is unnecessary to compute softmax probabilities to obtain the class labels\n",
         "print(predictions)"
       ]
     },
@@ -1654,6 +1655,7 @@
       },
       "outputs": [],
       "source": [
+        "# To generalize the computation of the prediction accuracy\n",
         "def compute_accuracy(model, dataloader):\n",
         "\n",
         "    model = model.eval()\n",
@@ -1666,11 +1668,11 @@
         "            logits = model(features)\n",
         "\n",
         "        predictions = torch.argmax(logits, dim=1)\n",
-        "        compare = labels == predictions\n",
-        "        correct += torch.sum(compare)\n",
+        "        compare = labels == predictions  # Returns a tensor of True/False values depending on whether the labels match\n",
+        "        correct += torch.sum(compare)  # The sum operation counts the number of True values\n",
         "        total_examples += len(compare)\n",
-        "\n",
-        "    return (correct / total_examples).item()"
+        "    # The fraction of correct prediction, a value between 0 and 1\n",
+        "    return (correct / total_examples).item()  # item() returns the value of the tensor as a Python float"
       ]
     },
     {
@@ -1740,6 +1742,10 @@
       },
       "outputs": [],
       "source": [
+        "# save model\n",
+        "# state_dict is a Python dictionary object that maps each layer in the model to its trainable parameters (weights and biases)\n",
+        "# \"model.pth\" is an arbitrary filename for the model file saved to disk.\n",
+        "# We can give it any name and file ending we like; however, .pth and .pt are the most common conventions.\n",
         "torch.save(model.state_dict(), \"model.pth\")"
       ]
     },
@@ -1764,7 +1770,10 @@
         }
       ],
       "source": [
+        "# we need an instance of the model in memory to apply the saved parameters\n",
         "model = NeuralNetwork(2, 2) # needs to match the original model exactly\n",
+        "# torch.load(\"model.pth\") function reads the file \"model.pth\" and recon-structs the Python dictionary object containing the model’s parameters\n",
+        "# model.load_state_dict() applies these parameters to the model, effectively restoring its learned state from when we saved it\n",
         "model.load_state_dict(torch.load(\"model.pth\", weights_only=True))"
       ]
     },
