--- a/ch02/01_main-chapter-code/ch02.ipynb
+++ b/ch02/01_main-chapter-code/ch02.ipynb
@@ -224,11 +224,11 @@
       "execution_count": 4,
       "id": "8a769e87-470a-48b9-8bdb-12841b416198",
       "metadata": {
-        "id": "8a769e87-470a-48b9-8bdb-12841b416198",
-        "outputId": "e1548750-5370-47a9-b99f-30dc794adc56",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8a769e87-470a-48b9-8bdb-12841b416198",
+        "outputId": "e1548750-5370-47a9-b99f-30dc794adc56"
       },
       "outputs": [
         {
@@ -268,11 +268,11 @@
       "execution_count": 7,
       "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
       "metadata": {
-        "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
-        "outputId": "1a0053fa-ea85-4fc1-8274-f1bc4a46f440",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "737dd5b0-9dbb-4a97-9ae4-3482c8c04be7",
+        "outputId": "1a0053fa-ea85-4fc1-8274-f1bc4a46f440"
       },
       "outputs": [
         {
@@ -313,11 +313,11 @@
       "execution_count": 8,
       "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
       "metadata": {
-        "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
-        "outputId": "75062ba7-91ac-4b5e-d870-b9ada7736c2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ea02489d-01f9-4247-b7dd-a0d63f62ef07",
+        "outputId": "75062ba7-91ac-4b5e-d870-b9ada7736c2c"
       },
       "outputs": [
         {
@@ -372,6 +372,42 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "item = ' '\n",
+        "print(bool(item))  # string with one character (space)\n",
+        "bool(item.strip()) # empty string"
+      ],
+      "metadata": {
+        "id": "fiEGrRriw1Vi",
+        "outputId": "2d887aa4-7139-4ece-a2fa-242b15de1f4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "fiEGrRriw1Vi",
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "250e8694-181e-496f-895d-7cb7d92b5562",
       "metadata": {
@@ -383,16 +419,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "ed3a9467-04b4-49d9-96c5-b8042bcf8374",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "ed3a9467-04b4-49d9-96c5-b8042bcf8374",
-        "outputId": "d7c8bcdc-6afd-400b-9929-1c8647064c9b"
+        "outputId": "12fba467-8fb7-4327-9682-78451cf79b6f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "['Hello', ',', 'world', '.', 'Is', 'this', '--', 'a', 'test', '?']\n"
           ]
@@ -404,6 +443,34 @@
         "result = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)\n",
         "result = [item.strip() for item in result if item.strip()]\n",
         "print(result)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tt = ''.join(result)\n",
+        "print(tt)\n",
+        "text = re.sub(r'\\s+([,.?!\"()\\'])', r'\\1', tt)\n",
+        "print(text)"
+      ],
+      "metadata": {
+        "id": "jvEUThxs6TeZ",
+        "outputId": "cf48d0f5-46e7-40e6-9379-73d9524e939a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "jvEUThxs6TeZ",
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello,world.Isthis--atest?\n",
+            "Hello,world.Isthis--atest?\n"
+          ]
+        }
       ]
     },
     {
@@ -428,24 +495,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "8c567caa-8ff5-49a8-a5cc-d365b0a78a99",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "8c567caa-8ff5-49a8-a5cc-d365b0a78a99",
-        "outputId": "91388ef5-c64c-4534-a158-55e4600e8c06"
+        "outputId": "35c980ae-6921-483d-9b65-8f43f92ad1b0"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "4690\n",
             "['I', 'HAD', 'always', 'thought', 'Jack', 'Gisburn', 'rather', 'a', 'cheap', 'genius', '--', 'though', 'a', 'good', 'fellow', 'enough', '--', 'so', 'it', 'was', 'no', 'great', 'surprise', 'to', 'me', 'to', 'hear', 'that', ',', 'in']\n"
           ]
         }
       ],
       "source": [
+        "# apply the above tokenization to the raw text\n",
         "preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', raw_text)\n",
         "preprocessed = [item.strip() for item in preprocessed if item.strip()]\n",
+        "print(len(preprocessed))  # number of tokens and NOT number of letters\n",
         "print(preprocessed[:30])"
       ]
     },
@@ -477,7 +550,7 @@
         }
       ],
       "source": [
-        "print(len(preprocessed))"
+        "print(len(preprocessed))  # number of tokens and NOT number of letters"
       ]
     },
     {
@@ -522,23 +595,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "7fdf0533-5ab6-42a5-83fa-a3b045de6396",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "7fdf0533-5ab6-42a5-83fa-a3b045de6396",
-        "outputId": "6cce51d5-2e03-43c8-f5ef-dc09af661ad9"
+        "outputId": "607545b7-2c83-4981-a1b2-ec0e6e7684a9"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1130\n"
           ]
         }
       ],
       "source": [
-        "all_words = sorted(set(preprocessed))\n",
+        "all_words = sorted(set(preprocessed))  # unique tokens sorted alphabetically\n",
         "vocab_size = len(all_words)\n",
         "\n",
         "print(vocab_size)"
@@ -546,13 +622,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "77d00d96-881f-4691-bb03-84fec2a75a26",
       "metadata": {
         "id": "77d00d96-881f-4691-bb03-84fec2a75a26"
       },
       "outputs": [],
       "source": [
+        "# build a map to have a unique ID for each token\n",
         "vocab = {token:integer for integer,token in enumerate(all_words)}"
       ]
     },
@@ -568,16 +645,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "e1c5de4a-aa4e-4aec-b532-10bb364039d6",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "e1c5de4a-aa4e-4aec-b532-10bb364039d6",
-        "outputId": "3f2ceace-f812-4231-d584-093f7eac623f"
+        "outputId": "d77e9fdb-82be-4784-cf38-2e3a476d0daa"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "('!', 0)\n",
             "('\"', 1)\n",
@@ -672,7 +752,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5",
       "metadata": {
         "id": "f531bf46-7c25-4ef8-bff8-0d27518676d5"
@@ -680,23 +760,34 @@
       "outputs": [],
       "source": [
         "class SimpleTokenizerV1:\n",
-        "    def __init__(self, vocab):\n",
+        "    def __init__(self, vocab):  # vocab is a dictionary in form of token:ID\n",
         "        self.str_to_int = vocab\n",
         "        self.int_to_str = {i:s for s,i in vocab.items()}\n",
         "\n",
-        "    def encode(self, text):\n",
-        "        preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)\n",
+        "    def encode(self, text):  # process input text into token id's\n",
+        "        preprocessed = re.split(r'([,.:;?_!\"()\\']|--|\\s)', text)  # tokenize\n",
         "\n",
         "        preprocessed = [\n",
-        "            item.strip() for item in preprocessed if item.strip()\n",
+        "            item.strip() for item in preprocessed if item.strip()  # stripping whithespaces\n",
         "        ]\n",
-        "        ids = [self.str_to_int[s] for s in preprocessed]\n",
+        "        ids = [self.str_to_int[s] for s in preprocessed]  # converrting tokens to ID's\n",
         "        return ids\n",
         "\n",
-        "    def decode(self, ids):\n",
+        "    def decode(self, ids):  # Converts token IDs back into text\n",
         "        text = \" \".join([self.int_to_str[i] for i in ids])\n",
         "        # Replace spaces before the specified punctuations\n",
-        "        text = re.sub(r'\\s+([,.?!\"()\\'])', r'\\1', text)\n",
+        "        '''\n",
+        "        re.sub(): This function searches for a pattern in a string and replaces it with a specified replacement.\n",
+        "\n",
+        "        r'\\s+([,.?!\"()\\'])': This is the regular expression pattern used for searching. It consists of two parts:\n",
+        "\n",
+        "        \\s+: Matches one or more whitespace characters.\n",
+        "        ([,.?!\"()\\']): Matches any of the punctuation marks inside the parentheses. The parentheses create a capturing group, which we'll refer to later.\n",
+        "        r'\\1': This is the replacement string. The \\1 refers to the first capturing group in the search pattern. In this case, it represents the punctuation mark that was matched.\n",
+        "\n",
+        "        text: This is the input string where the substitution will be performed.\n",
+        "        '''\n",
+        "        text = re.sub(r'\\s+([,.?!\"()\\'])', r'\\1', text)  # Removes spaces before the specified punctuation\n",
         "        return text"
       ]
     },
